@@ -21,6 +21,8 @@ Slated for 2.21.0
 - Changed: PairGroup now uses a pooled array of pairs instead creating many 
   pair objects over and over again.
 - Changed: PairGroup.clear().
+- Added: To Common: addSorted(T[], T, int), sortFrom(T[], int), 
+  sortFrom(T[], int, Comparator<T>)
 
 Changed in 2.20.2
 =================
